Fixed mobile nav z-index

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -407,7 +407,7 @@ nav span {
     background: white;
     text-align: left;
     transition: all 0.5s;
-    z-index: 1;
+    z-index: 999;
     left: 0;
 }
 
